@@ -10,6 +10,7 @@ public class CustomPrinter {
 
     private Converter converter = new Converter();
     private final String path = "./views/";
+    private final String quoutes = "\"";
 
     public void print(Object obj, HashMap<String, String> map) throws Exception {
         String file_type = map.get("accept");
@@ -54,38 +55,30 @@ public class CustomPrinter {
         else {
             String types = "";
             int count = 0;
-            if(obj.getChecklist() != null) { types += "\"" + "Checklist" + "\"," ; count++; }
-            if(obj.getChecklist_Task() != null) { types += "\"" + "Checklist Task" + "\",";count++; }
-            if(obj.getTemplate() != null) { types += "\"" + "Template" + "\",";count++; }
-            if(obj.getTemplate_Task() != null){  types += "\"" + "Template Task" + "\",";count++; }
 
-            if(count > 0){ types += "\"" + "Collections" + "\""; count++; }
-            //Since we have more than 1 type, the prop_header will only have the count attribute
-
-
-            for (Object e : obj.getWrapperObjects()) {
+            for (int i = 0; i< obj.getWrapperObjects().size(); i++) {
+                Object e = obj.getWrapperObjects().get(i);
+                types += transformToJSON(e) + ",";
+                count++;
 
                 LinkedList<HashMap<String, String[]>> listJSON = processWrapperToJSON(e);
-                converter.compile(listJSON, false, Converter.class.getClassLoader().getResource(path +"wrapper_element.json").getPath());
+                converter.compile(listJSON, false, Converter.class.getClassLoader().getResource(path + "element.json").getPath());
 
                 String[] arr = new String[1];
-                arr[0] = converter.getMessage();
+                arr[0] = converter.getMessage() + (i == (obj.getWrapperObjects().size() -1) ? "" : ",");
                 map.put("table", arr);
                 result.add(map);
 
                 map = new HashMap<>();
             }
-            //Remove the "," from the last one
-            String tmp[] = result.getLast().get("table");
-            String msg = tmp[tmp.length-1];
-            msg = msg.substring(0, msg.length() - 2);
-            result.getLast().remove("table");
-            result.getLast().put("table", new String[]{msg});
+
+
+            if(count > 0){ types += "\"" + "Collections" + "\""; count++; }
 
             result.getFirst().put("prop_header", new String[]{"\"count\" : " + count + ""});
             result.getFirst().put("class_types", new String[]{types});
 
-            run(result, file_location, false, Converter.class.getClassLoader().getResource(path +"template_wrapper.json").getPath());
+            run(result, file_location, false, Converter.class.getClassLoader().getResource(path + "template.json").getPath());
         }
     }
 
@@ -97,7 +90,7 @@ public class CustomPrinter {
         else {
             for (Object e : obj.getWrapperObjects()) {
                 LinkedList<HashMap<String, String[]>> listHTML = processWrapperToHTML(e);
-                converter.compile(listHTML, true, Converter.class.getClassLoader().getResource(path +"wrapper_element.html").getPath());
+                converter.compile(listHTML, true, Converter.class.getClassLoader().getResource(path + "element.html").getPath());
 
                 String[] arr = new String[1];
                 arr[0] = converter.getMessage();
@@ -107,86 +100,46 @@ public class CustomPrinter {
                 map = new HashMap<>();
             }
             result.get(0).put("page_title", new String[]{"Results"});
-            run(result, file_location, true, Converter.class.getClassLoader().getResource(path +"template_wrapper.html").getPath());
+            run(result, file_location, true, Converter.class.getClassLoader().getResource(path + "template.html").getPath());
         }
     }
 
-    private void toJSON(LinkedList obj, String file_location) {
-        LinkedList<HashMap<String, String[]>> listJSON = new LinkedList<>();
-        String class_types[];
-        /*JSON
-        *Since we know that the result was a linkedlist we add the Collection attribute
-        */
-        HashMap<String, String[]> map = new HashMap<>();
-        if(obj.size() > 0) {
-            class_types = new String[]{"\"" + ((BaseDTO) obj.getFirst()).getDTOName() + "\"", "\"Collections\""};
-        }
-        else {
-            class_types = new String[]{"\"" + "\"", "\"Collections\""};
-        }
-        map.put("class_types", class_types);
+    private void toJSON(LinkedList obj, String file_location) throws Exception {
+        LinkedList<HashMap<String, String[]>> listJSON;
+
+        String class_types[] = {transformToJSON((BaseDTO) obj.getFirst()) + ", " + quoutes + "Collections" + quoutes};
 
         //Since we have more than 1 type, the prop_header will only have the count attribute
-        String props[] = {"\"count\" : " + class_types.length + ""};
-        map.put("prop_header", props);
+        listJSON = processWrapperToJSON(obj);
 
-        //listJSON.add(map);
-        if(obj.size() > 0) {
-            for (Object e : obj) {
-                int numberOfProperties = ((BaseDTO) e).getPropertiesNames().length;
+        converter.compile(listJSON, false, Converter.class.getClassLoader().getResource(path + "element.json").getPath());
 
-                props = new String[numberOfProperties];
+        String[] arr = new String[1];
+        arr[0] = converter.getMessage();
+        listJSON.getFirst().put("table", arr);
 
-                String name[] = {"\"" + ((BaseDTO) e).getDTOName() + "\""};
-                map.put("class_name", name);
+        listJSON.getFirst().put("prop_header", new String[]{"\"count\" : " + 2 + ""});
+        listJSON.getFirst().put("class_types", class_types);
 
-                for (int i = 0; i < numberOfProperties; i++) {
-
-                    String begin = "\"" + ((BaseDTO) e).getPropertiesNames()[i] + "\" : ";
-
-                    if (isInteger((((BaseDTO) e).getPropertiesValues()[i]), 10) || isBoolean((((BaseDTO) e).getPropertiesValues()[i]))) {
-                        begin += ((BaseDTO) e).getPropertiesValues()[i];
-
-                    } else {
-                        begin += "\"" + ((BaseDTO) e).getPropertiesValues()[i] + "\"";
-
-                    }
-
-                    props[i] = begin;
-
-                }
-                map.put("prop_body", props);
-
-                listJSON.add(map);
-                map = new HashMap<>();
-            }
-        }
-        else {
-            listJSON.add(map);
-        }
-        run(listJSON, file_location, false, Converter.class.getClassLoader().getResource(path +"template_list.json").getPath());
+        run(listJSON, file_location, false, Converter.class.getClassLoader().getResource(path +"template.json").getPath());
     }
 
-    private void toHTML(LinkedList obj, String file_location) {
-        LinkedList<HashMap<String, String[]>> listHTML = new LinkedList<>();
-        //HTML
-        HashMap<String, String[]> map = new HashMap<>();
+    private void toHTML(LinkedList obj, String file_location) throws Exception {
+        LinkedList<HashMap<String, String[]>> listHTML;
+
         String title[] = {"Result"};
-        map.put("page_title", title);
 
-        if(obj.size() > 0) {
-            map.put("table_header", ((BaseDTO) obj.get(0)).getPropertiesNames());
+        listHTML = processWrapperToHTML(obj);
+        listHTML.getFirst().put("page_title", title);
+        listHTML.getFirst().put("table_header", ((BaseDTO) obj.get(0)).getPropertiesNames());
 
-            for (Object e : obj) {
+        converter.compile(listHTML, true, Converter.class.getClassLoader().getResource(path + "element.html").getPath());
 
-                map.put("table_value", ((BaseDTO) e).getPropertiesValues());
-                listHTML.add(map);
-                map = new HashMap<>();
-            }
-        } else {
-            listHTML.add(map);
-        }
-        run(listHTML, file_location, true, Converter.class.getClassLoader().getResource(path + "template_list.html").getPath());
+        String[] arr = new String[1];
+        arr[0] = converter.getMessage();
+        listHTML.getFirst().put("table", arr);
+
+        run(listHTML, file_location, true, Converter.class.getClassLoader().getResource(path + "template.html").getPath());
     }
 
     private void run(LinkedList<HashMap<String, String[]>> list, String file_location, boolean isHTML, String template) {
@@ -202,27 +155,8 @@ public class CustomPrinter {
         try {
             converter.commit(text, file_location);
         } catch (Exception e) {
-            System.out.println();
+            System.out.println("PARABENS: Acabaste de conseguir provocar um....Erro!");
         }
-    }
-
-    private static boolean isInteger(String s, int radix) {
-        if (s == null) return false;
-
-        if (s.isEmpty()) return false;
-        for (int i = 0; i < s.length(); i++) {
-            if (i == 0 && s.charAt(i) == '-') {
-                if (s.length() == 1) return false;
-                else continue;
-            }
-            if (Character.digit(s.charAt(i), radix) < 0) return false;
-        }
-        return true;
-    }
-
-    private static boolean isBoolean(String s) {
-        return s != null && (s.equals("true") || s.equals("false"));
-
     }
 
     private LinkedList<HashMap<String, String[]>> processWrapperToHTML(Object obj) {
@@ -249,29 +183,27 @@ public class CustomPrinter {
         return listHTML;
     }
 
-    private LinkedList<HashMap<String, String[]>> processWrapperToJSON(Object obj) {
+    private LinkedList<HashMap<String, String[]>> processWrapperToJSON(Object obj) throws Exception {
         LinkedList<HashMap<String, String[]>> listJSON = new LinkedList<>();
         String props[];
         HashMap<String, String[]> map = new HashMap<>();
         if (obj instanceof LinkedList) {
-
-
             for (Object e :(LinkedList)obj) {
                 int numberOfProperties = ((BaseDTO) e).getPropertiesNames().length;
                 props = new String[numberOfProperties];
 
-                String name[] = {"\"" + ((BaseDTO) e).getDTOName() + "\""};
+                String name[] = new String[]{transformToJSON((BaseDTO) e)};
                 map.put("class_name", name);
 
                 for (int i = 0; i < numberOfProperties; i++) {
 
-                    String begin = "\"" + ((BaseDTO) e).getPropertiesNames()[i] + "\" : ";
+                    String begin = quoutes + ((BaseDTO) e).getPropertiesNames()[i] + quoutes + ": ";
 
                     if (isInteger((((BaseDTO) e).getPropertiesValues()[i]), 10) || isBoolean((((BaseDTO) e).getPropertiesValues()[i]))) {
                         begin += ((BaseDTO) e).getPropertiesValues()[i];
 
                     } else {
-                        begin += "\"" + ((BaseDTO) e).getPropertiesValues()[i] + "\"";
+                        begin += quoutes + ((BaseDTO) e).getPropertiesValues()[i] + quoutes;
 
                     }
 
@@ -310,5 +242,40 @@ public class CustomPrinter {
             listJSON.add(map);
         }
         return listJSON;
+    }
+
+
+    /*UTILS*/
+    private static boolean isInteger(String s, int radix) {
+        if (s == null) return false;
+
+        if (s.isEmpty()) return false;
+        for (int i = 0; i < s.length(); i++) {
+            if (i == 0 && s.charAt(i) == '-') {
+                if (s.length() == 1) return false;
+                else continue;
+            }
+            if (Character.digit(s.charAt(i), radix) < 0) return false;
+        }
+        return true;
+    }
+
+    private static boolean isBoolean(String s) {
+        return s != null && (s.equals("true") || s.equals("false"));
+
+    }
+
+    private String transformToJSON(Object e) throws Exception {
+        String tmp = "";
+        if(e instanceof LinkedList){
+           tmp = quoutes + ((BaseDTO)((LinkedList)e).get(0)).getDTOName() + quoutes;
+        }
+        else if(e instanceof BaseDTO){
+            tmp = quoutes + ((BaseDTO)e).getDTOName() + quoutes;
+        }else{
+            throw new Exception("Object not supported!");
+        }
+
+        return tmp;
     }
 }
